# aoc-2020

./: .gitignore  AoC2020.cabal  CHANGELOG.md  Ex01.hs  Main.hs  README.md  aoc-2020.cabal
ex01/: Main.hs
ex02/: Main.hs
ex03/: Main.hs
ex04/: Main.hs
ex05/: Main.hs
ex06/: Main.hs
ex07/: Main.hs  tryouts.hs
ex08/: Main.hs
ex09/: Main.hs
ex10/: Main.hs
ex11/: Main.hs
ex12/: Main.hs
ex13/: Main.hs
ex14/: Main.hs
ex15/: Main.hs
