cabal-version:       >=1.10
name:                AoC2020
version:             0.1.0.0
author:              Rens Breur
maintainer:          rens.breur@lightspeedhq.com
build-type:          Simple

executable ex01
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14
  hs-source-dirs:      ex01
  default-language:    Haskell2010

executable ex02
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14, parsec
  hs-source-dirs:      ex02
  default-language:    Haskell2010
