cabal-version:       >=1.10
name:                AoC2020
version:             0.1.0.0
author:              Rens Breur
maintainer:          rens.breur@lightspeedhq.com
build-type:          Simple

executable ex01
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14
  hs-source-dirs:      ex01
  default-language:    Haskell2010

executable ex02
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14, parsec
  hs-source-dirs:      ex02
  default-language:    Haskell2010

executable ex03
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14, array
  hs-source-dirs:      ex03
  default-language:    Haskell2010

executable ex04
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14, parsec, containers
  hs-source-dirs:      ex04
  default-language:    Haskell2010

executable ex05
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14
  hs-source-dirs:      ex05
  default-language:    Haskell2010

executable ex06
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14, parsec, containers 
  hs-source-dirs:      ex06
  default-language:    Haskell2010

executable ex07
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14, containers, parsec, mtl
  hs-source-dirs:      ex07
  default-language:    Haskell2010

executable ex08
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14, containers, parsec, mtl, vector
  hs-source-dirs:      ex08
  default-language:    Haskell2010

executable ex09
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14, containers, parsec, mtl, vector
  hs-source-dirs:      ex09
  default-language:    Haskell2010

executable ex10
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14, containers, parsec, mtl, vector
  hs-source-dirs:      ex10
  default-language:    Haskell2010

executable ex11
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14, containers, parsec, mtl, vector
  hs-source-dirs:      ex11
  default-language:    Haskell2010

executable ex12
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14, containers, parsec, mtl, vector
  hs-source-dirs:      ex12
  default-language:    Haskell2010

